<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Intelligent Alarm</string>
    <string name="action_settings">Settings</string>
    <string name="label_host">Host</string>
    <string name="label_port">Port</string>
    <string name="label_settings">Settings</string>
    <string name="button_use">use</string>
    <string name="menu_settings">settings</string>
    <string name="menu_exit">exit</string>
    <string name="button_test">Test</string>
    <string name="tv_choose_data_time">Choose a date and time</string>
    <string name="btn_set_alarm">Set Alarm</string>
    <string name="btn_test_weather">Test Weather</string>
    <string name="btn_test_flight_schedule">Test Flight Schedule</string>
    <string name="btn_test_snooze">Test Snooze</string>
    <string name="btn_pick_date">Pick Date</string>
    <string name="btn_pick_time">Pick Time</string>
    <string name="place_holder">Place holder</string>
    <string name="label_alarm_screen">Alarm Screen</string>

</resources>